@@ -23,6 +23,7 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1571456 : Do htmlspecialchars() after substr() (Tim Gerundt).
     * Patch #1571364 : Use title for sort images (Tim Gerundt).
     * Patch #1569369 : Use logon aliases (Tim Gerundt).
     * Patch #1566239 : Remove unnecessary table from "html/html_mail_*.php" (Tim
